# wfplug-brightness

./: .gitignore  README.md  meson.build
data/: meson.build  wfplug-brightness@.service
scripts/: apply-brightness.sh  make_panel_icon.py
src/: brightness.cpp  brightness.hpp  brightness.xml  meson.build
